--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 services:
   - docker
 
+node_js:
+  - "11.10.1"
+
 before_install:
   - docker build -t meskalin/docker-react -f Dockerfile.dev .
 
